crates/schema/tests/compile_fail/derive_default_float_non_finite.stderr
error: #[field(default = ..)]: float default must be finite (NaN / infinity are not valid JSON numbers)
  --> tests/compile_fail/derive_default_float_non_finite.rs:10:5
   |
10 |     ratio: f64,
   |     ^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_default_float_non_finite.rs:14:18
   |
 5 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
14 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
